--- a/_includes/lc/schedule.html
+++ b/_includes/lc/schedule.html
@@ -4,8 +4,9 @@
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td>Data Intro for Librarians</td> </tr>
       <tr> <td>10:30</td>  <td>Coffee</td> </tr>
+      <tr> <td>10:50</td>  <td>Power tools</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Shell Lessons for Libraries</td> </tr>
+      <tr> <td>13:00</td>  <td>Health and safety check</td> </tr>
       <tr> <td>14:30</td>  <td>Coffee</td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:30</td>  <td>END</td> </tr>
